tests/baselines/reference/templateStringsArrayTypeNotDefinedES5Mode.errors.txt
tests/cases/compiler/templateStringsArrayTypeNotDefinedES5Mode.ts(4,3): error TS2345: Argument of type '{}' is not assignable to parameter of type 'TemplateStringsArray<readonly string[], readonly string[]>'.
  Type '{}' is missing the following properties from type 'readonly string[]': length, concat, join, slice, and 9 more.


==== tests/cases/compiler/templateStringsArrayTypeNotDefinedES5Mode.ts (1 errors) ====
    function f(x: TemplateStringsArray, y: number, z: number) {
    }
    
    f({}, 10, 10);
      ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type 'TemplateStringsArray<readonly string[], readonly string[]>'.
!!! error TS2345:   Type '{}' is missing the following properties from type 'readonly string[]': length, concat, join, slice, and 9 more.
    
    f `abcdef${ 1234 }${ 5678 }ghijkl`;